--- a/style.css
+++ b/style.css
@@ -23,14 +23,14 @@ body{
     flex-direction: row;
     flex-wrap: nowrap;
     align-items: center;
-    justify-content: space-between;
+    justify-content: space-around;
     align-content: center;
     
     border: rgba(0, 255, 0, 0) solid 1px;
 }
 
 .header-box{
-    border: rgba(0, 4, 255, 0.842) solid 1px;
+    border: rgba(0, 4, 255, 0) solid 1px;
     width: 100%;
     height: 100%;
 }
@@ -39,16 +39,16 @@ body{
 .header-logo,
 .header-link {
     position: relative;
-    display: inline-block;
+    display:inline-table;
     margin: 0;
-    width: 30%;
+    width: 32%;
     height: 100%;
     border: red solid 1px;
 
 }
 .header-logo{
-    margin-left:3%;
+   
 }
 .header-link{
-    margin-left:3%;
+    
 }
