--- a/style.css
+++ b/style.css
@@ -13,23 +13,33 @@ body{
 
 
 .header{
-    position: relative;
+    padding: 2%;
+    position: absolute;
     display: flex;
     top:0;
     left: 0;
     width: 100%;
-    height: 100px;
+    height: 10vh;
     background-color: rgb(22, 27, 34);
     flex-direction: row;
     flex-wrap: nowrap;
     align-items: center;
-    justify-content: space-around;
+    justify-content: center;
     align-content: center;
     
     border: rgba(0, 255, 0, 0) solid 1px;
 }
 
 .header-box{
+    margin: 0;
+    display: inherit;
+    padding: 10px;
+    width: 100px;
+    height: 100px;
+    -webkit-align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
+    border: red solid 1px;
     border: rgba(0, 4, 255, 0) solid 1px;
     width: 100%;
     height: 100%;
@@ -38,16 +48,23 @@ body{
 .header-profile,
 .header-logo,
 .header-link {
-    position: relative;
-    display:inline-table;
     margin: 0;
-    width: 32%;
-    height: 100%;
+    display: inherit;
+    padding: 10px;
+    width: 100%;
+    height: 100px;
+    -webkit-align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
     border: red solid 1px;
 
 }
 .header-logo{
-   
+   align-self:center;
+  
+}
+.img-circle{
+    border: red solid 1px;
 }
 .header-link{
     
