--- a/style.css
+++ b/style.css
@@ -1,71 +1,97 @@
 *{
-    padding: 0px;
     margin: 0px;
     font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji";;
 }
 body{
     background-color: rgb(13, 17, 23);
 }
-.textEv{
-    color: rgb(74, 138, 211);
+
+    /* Hamburger Menu */
+.hMenu-box {
+    display: inline-block;       
+    cursor: pointer;
+}
+.bar1, .bar2, .bar3 {
+    width: 35px;
+    height: 5px;
+    background-color: #4a8ad3;
+    margin: 6px 0;
+    transition: 0.4s;
+}
+.change .bar1 {
+    -webkit-transform: rotate(-45deg) translate(-9px, 6px);
+    transform: rotate(-45deg) translate(-9px, 6px);
+}
+  
+.change .bar2 {opacity: 0;}
+  
+.change .bar3 {
+    -webkit-transform: rotate(45deg) translate(-8px, -8px);
+    transform: rotate(45deg) translate(-8px, -8px);
 }
 
 
-
-.header{
-    padding: 2%;
-    position: absolute;
+    /* Header */
+.header {
     display: flex;
-    top:0;
-    left: 0;
-    width: 100%;
-    height: 10vh;
+    font-size: 14px;
+    color: var(--color-header-text);
     background-color: rgb(22, 27, 34);
-    flex-direction: row;
-    flex-wrap: nowrap;
     align-items: center;
-    justify-content: center;
-    align-content: center;
-    
-    border: rgba(0, 255, 0, 0) solid 1px;
+    flex-wrap: nowrap;
 }
 
 .header-box{
-    margin: 0;
-    display: inherit;
-    padding: 10px;
-    width: 100px;
-    height: 100px;
-    -webkit-align-items: center;
-    -ms-flex-align: center;
-    align-items: center;
-    border: red solid 1px;
-    border: rgba(0, 4, 255, 0) solid 1px;
     width: 100%;
-    height: 100%;
+    display: flex;
+    padding: 10px;
+    align-items: center;
+    justify-content: space-between;
 }
 
 .header-profile,
 .header-logo,
 .header-link {
-    margin: 0;
+    height: 40px;
     display: inherit;
     padding: 10px;
-    width: 100%;
-    height: 100px;
-    -webkit-align-items: center;
-    -ms-flex-align: center;
     align-items: center;
-    border: red solid 1px;
+
 
 }
-.header-logo{
-   align-self:center;
-  
+.header-logo {
 }
 .img-circle{
-    border: red solid 1px;
+    width: 50px;
+    overflow: hidden;
+    background-color: #234;
+    position: relative;
+    border-radius: 50%;
+    transition: all 0.4s ease-in-out;
 }
+.img-circle:hover{
+    opacity: 60%;
+}
+.img-circle #myLinks {
+    display: none;
+  }
 .header-link{
-    
+    justify-content: space-around;    
+}
+
+.header-link a {
+    margin-left: 25px;
+    color: #4a8ad3;
+    text-decoration: none;
+    font-size: 120%;
+}
+/* hamburger menu */
+
+.hamburger-box {
+    opacity: 0;
+    position:absolute;
+    margin: 20px;
+    background-color: rgba(0, 0, 0, 0.39);
+    height: 400px;
+    width: 200px;
 }
