--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 *{
+    transition: all 0.4s ease-in-out;
     margin: 0px;
     font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji";;
 }
@@ -64,17 +65,22 @@ body{
 }
 .img-circle{
     width: 50px;
-    overflow: hidden;
     background-color: #234;
-    position: relative;
+    position: absolute;
+    left: 50%;
     border-radius: 50%;
-    transition: all 0.4s ease-in-out;
 }
+@media screen and (max-width: 800px) {
+    .img-circle {
+      position: relative;
+      left: auto;
+    }
+  }
 .img-circle:hover{
     opacity: 60%;
 }
-.img-circle #myLinks {
-    display: none;
+.img-circle {
+    
   }
 .header-link{
     justify-content: space-around;    
@@ -86,13 +92,64 @@ body{
     text-decoration: none;
     font-size: 120%;
 }
+.header-link a:hover {
+    text-decoration: underline;
+}
 /* hamburger menu */
 
 .hamburger-box {
-    opacity: 0;
+    margin-top: -2px;
+    margin-left: 20px;
+    display: none;
     position:absolute;
-    margin: 20px;
-    background-color: rgba(0, 0, 0, 0.39);
-    height: 400px;
-    width: 200px;
+    background-color: rgba(0, 0, 0, 0.726);
+    height: 800px;
+    width: 400px;
+    
+}
+.hamburger-sub-box {
+    border: 1px solid rgb(255, 0, 0);
+    width: 100%;
+    height: 24%;
+}
+
+/* body/struttura */
+
+.body-cover {
+    display: flex;
+    justify-content: space-between;
+
+    height: auto;
+    padding-top: 20px;
+}
+
+.body-box {
+    width: 20%;
+    height: 1000px;
+    border: 1px solid #ad9a9a63;
+    padding: 20px;
+}
+
+/* box */
+
+.central-body-box {
+    border: 1px solid rgb(0, 0, 0);
+    background-color: rgba(0, 0, 0, 0.808);
+    border-radius: 15px;
+    height: 100px;
+}
+
+.bar1-centro, .bar2-centro {
+    position: absolute;
+    width: 20px;
+    height: 3px;
+    background-color: #ffffff;
+    margin: 10px 10px;
+
+    transform: rotate(-45deg) translate(-9px, 6px);
+}
+
+.bar2-centro {
+
+    transform: rotate(-135deg) translate(-15px, 0px); 
 }
