--- a/style.css
+++ b/style.css
@@ -1,5 +1,4 @@
 *{
-    transition: all 0.4s ease-in-out;
     margin: 0px;
     font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji";;
 }
@@ -79,9 +78,6 @@ body{
 .img-circle:hover{
     opacity: 60%;
 }
-.img-circle {
-    
-  }
 .header-link{
     justify-content: space-around;    
 }
@@ -101,7 +97,7 @@ body{
     margin-top: -2px;
     margin-left: 20px;
     display: none;
-    position:absolute;
+    position: absolute;
     background-color: rgba(0, 0, 0, 0.726);
     height: 800px;
     width: 400px;
@@ -118,7 +114,6 @@ body{
 .body-cover {
     display: flex;
     justify-content: space-between;
-
     height: auto;
     padding-top: 20px;
 }
@@ -133,23 +128,48 @@ body{
 /* box */
 
 .central-body-box {
+    display: static;
+    padding: 10px;
+    flex-direction: column;
     border: 1px solid rgb(0, 0, 0);
     background-color: rgba(0, 0, 0, 0.808);
     border-radius: 15px;
-    height: 100px;
+    min-height: 100px;
+    height: auto;
+}
+
+.box-bar{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 10px;
+    float: right;
+    width: 30px;
+    height: 30px;
+
 }
 
 .bar1-centro, .bar2-centro {
-    position: absolute;
+
     width: 20px;
     height: 3px;
     background-color: #ffffff;
-    margin: 10px 10px;
+    margin: 0;
+    transform: rotate(45deg) translate(8.5px, -8.5px);
 
-    transform: rotate(-45deg) translate(-9px, 6px);
 }
 
-.bar2-centro {
+.bar2-centro { 
 
-    transform: rotate(-135deg) translate(-15px, 0px); 
+    transform: rotate(135deg) translate(8px, 8px);
 }
+.sotto-tenda {
+    display: none;
+    height: 300px;
+    color: white;
+}
+.sotto-tenda h1{
+    color: white;
+}
+
+
