--- a/style.css
+++ b/style.css
@@ -94,18 +94,18 @@ body{
 /* hamburger menu */
 
 .hamburger-box {
-    margin-top: -2px;
-    margin-left: 20px;
+    
     display: none;
     position: absolute;
-    background-color: rgba(0, 0, 0, 0.726);
-    height: 800px;
-    width: 400px;
+    background-color: rgba(0, 0, 0, 0.308);
+    height: 100vh;
+    width: 100vh;
     
 }
 .hamburger-sub-box {
-    border: 1px solid rgb(255, 0, 0);
-    width: 100%;
+    background-color: rgba(0, 0, 0, 0.8);
+    border: 1px solid #2e2c2c;
+    width: 70vh;
     height: 24%;
 }
 
@@ -128,17 +128,19 @@ body{
 /* box */
 
 .central-body-box {
+    
     display: static;
     padding: 10px;
     flex-direction: column;
     border: 1px solid rgb(0, 0, 0);
     background-color: rgba(0, 0, 0, 0.808);
     border-radius: 15px;
-    min-height: 100px;
+    min-height: 50px;
     height: auto;
 }
 
 .box-bar{
+    
     display: flex;
     justify-content: center;
     align-items: center;
@@ -150,7 +152,7 @@ body{
 }
 
 .bar1-centro, .bar2-centro {
-
+    transition: all 0.1s ease-in-out;
     width: 20px;
     height: 3px;
     background-color: #ffffff;
@@ -164,8 +166,8 @@ body{
     transform: rotate(135deg) translate(8px, 8px);
 }
 .sotto-tenda {
+    transition: all 1s ease-in-out;
     display: none;
-    height: 300px;
     color: white;
 }
 .sotto-tenda h1{
