--- a/style.css
+++ b/style.css
@@ -91,7 +91,7 @@ body{
     z-index: 2;
     display: none;
     position: absolute;
-    background-color: rgba(0, 0, 0, 0.6);
+    background-color: rgba(0, 0, 0, 0.192);
     height: 89vh;
     width: 100%;
     
@@ -185,7 +185,6 @@ body{
     height: 100%;
     top: 0px;
     left: 0px;
-    z-index: 10;
     background-color: #00000094;
  }
 
@@ -196,7 +195,6 @@ body{
     flex-direction: column;
     position: absolute;
     color: white;
-    z-index: 11;
     width: 40%;
     height: 30%;
     background-color: rgb(0, 0, 0);
@@ -254,6 +252,10 @@ body{
     .hamburger-sub-box {
         width: 60%;
         height: 20%;
+    }
+    .login-cover {
+        width: 60%;
+        height: 40%;
     }
   }
 
