--- a/style.css
+++ b/style.css
@@ -110,36 +110,41 @@ body{
     justify-content: space-between;
     height: auto;
     padding-top: 15px;
-
 }
 
 .body-box {
     border-radius: 3px;
     width: 1%;
     height: 600px;
-    border: 1px solid #ad9a9a63;
+
     padding: 20px;
 }
 .body-box-big {
+    border: 1px solid #ad9a9a63;
     width: 78%;
 }
 
 /* box */
 
-.central-body-box {
-    
-    display: static;
+.contenitore-centrale {
+    display: flex;
     padding: 10px;
     flex-direction: column;
-    border: 1px solid rgb(0, 0, 0);
-    background-color: rgba(0, 0, 0, 0.908);
+    justify-content: space-between;
+    background-color: #000000e8;
+    min-height: 50px;
     border-radius: 15px;
     min-height: 50px;
-    height: auto;
 }
-
+.central-body-box {
+    display: flex;
+    padding: 10px;
+    flex-direction: row;
+    justify-content: space-between; 
+    color: #ff7a7a;
+    ;
+}
 .box-bar{
-    
     display: flex;
     justify-content: center;
     align-items: center;
@@ -148,7 +153,6 @@ body{
     width: 30px;
     height: 30px;
     cursor: pointer;
-
 }
 
 .bar1-centro, .bar2-centro {
@@ -158,7 +162,6 @@ body{
     background-color: #ffffff;
     margin: 0;
     transform: rotate(45deg) translate(8.5px, -8.5px);
-
 }
 
 .bar2-centro { 
@@ -166,8 +169,9 @@ body{
 }
 .sotto-tenda {
     transition: all 1s ease-in-out;
-    display: none;
+    display: block;
     color: white;
+    margin-top: 40px
 }
 .sotto-tenda h1{
     color: rgb(255, 122, 122);
@@ -227,15 +231,50 @@ body{
      background-color: #4a8ad3;
  }
 
+ /* Arduino  */
+ .arduino{
+    display: none;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0px;
+    left: 0px;
+    background-color: #00000094;
+ }
 
+ .arduino-cover {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    position: absolute;
+    color: white;
+    width: 40%;
+    height: 30%;
+    background-color: rgb(0, 0, 0);
+    border-radius: 10px;
+    padding: 0px;
+    border: solid rgb(87, 84, 84);
+ }
 
-
-
-
-
-
-
-
+ .bar1-w {
+    width: 15px;
+    height: 3px;
+    background-color: #ffffff;
+    margin: 6px 0;
+    transition: 0.4s;
+    transform: rotate(-45deg) translate(4px, 4px);
+ }
+ .bar2-w {
+    width: 15px;
+    height: 3px;
+    background-color: #ffffff;
+    margin: 6px 0;
+    transition: 0.4s;
+    transform: rotate(-315deg) translate(-6px, 6px);
+ }
 
 
 @media screen and (max-width: 800px) {
