--- a/Car77/index/style.css
+++ b/Car77/index/style.css
@@ -30,7 +30,7 @@ a {
     width: 100%;
 
     display: flex;
-    flex-direction: center;
+    flex-direction: column;
     flex-wrap: nowrap;
     align-items: center;
     justify-content: center;
@@ -172,7 +172,9 @@ a {
     width: fit-content;
     font-size: 4rem;
     position: relative;
-    color: white;
+    color: var(--main-color-1);
+    font-weight: 600;
+ 
 }
 
 #hero .button01{
@@ -294,3 +296,8 @@ a {
 }
 
 
+
+@media screen and (min-width: 800px) {
+
+
+}
